Fixed views issues on small screens (#20)

--- a/src/app/common/community-logos/community-logos.scss
+++ b/src/app/common/community-logos/community-logos.scss
@@ -26,7 +26,7 @@
 
     &__item {
         float: left;
-        width: calc(25%);
+        width: 25%;
         padding: 30px 0;
         text-align: center;
         background-color: #fff;
@@ -34,7 +34,7 @@
         border-bottom: 1px solid #eeeeee;
 
         @media screen and (max-width: $screen-sm-max) {
-            width: calc(50% - 16px);
+            width: 50%;
             padding: 16px 0;
         }
 
